--- a/index.html
+++ b/index.html
@@ -4,10 +4,79 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contatti Team</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Fredoka:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!-- Header -->
+    <header>
+        <h1>Meet Our Team</h1>
+    </header>
+    <!-- Main -->
+    <main>
+        <!-- Paragrafo testo -->
+        <section>
+            <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem labore velit ipsum sint maxime deserunt ducimus nesciunt a eveniet excepturi! Corporis, praesentium amet? Officiis labore illo ducimus eveniet quis reiciendis.
+            </p>
+        </section>
+        <!-- Colonne contatti -->
+        <section class="colums clearfixes">
+            <div class="col">
+                <div class="card">
+                    <img src="" alt="">
+                    <div>
+                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus alias accusamus voluptatibus, minus assumenda, labore laboriosam velit facere nulla distinctio eos quam quisquam perspiciatis aliquid id quia, cupiditate impedit tempora. 
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="" alt="">
+                    <div>
+                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus alias accusamus voluptatibus, minus assumenda, labore laboriosam velit facere nulla distinctio eos quam quisquam perspiciatis aliquid id quia, cupiditate impedit tempora. 
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="" alt="">
+                    <div>
+                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus alias accusamus voluptatibus, minus assumenda, labore laboriosam velit facere nulla distinctio eos quam quisquam perspiciatis aliquid id quia, cupiditate impedit tempora. 
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="" alt="">
+                    <div>
+                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus alias accusamus voluptatibus, minus assumenda, labore laboriosam velit facere nulla distinctio eos quam quisquam perspiciatis aliquid id quia, cupiditate impedit tempora. 
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="" alt="">
+                    <div>
+                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus alias accusamus voluptatibus, minus assumenda, labore laboriosam velit facere nulla distinctio eos quam quisquam perspiciatis aliquid id quia, cupiditate impedit tempora. 
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="" alt="">
+                    <div>
+                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus alias accusamus voluptatibus, minus assumenda, labore laboriosam velit facere nulla distinctio eos quam quisquam perspiciatis aliquid id quia, cupiditate impedit tempora. 
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+
+
 </body>
 </html>
