--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </p>
         </section>
         <!-- Colonne contatti -->
-        <section class="colums clearfixes">
+        <section class="columns clearfix">
             <div class="col">
                 <div class="card">
                     <img src="" alt="">
