CSS: card image and content setup

--- a/index.html
+++ b/index.html
@@ -27,48 +27,48 @@
         <section class="columns clearfix">
             <div class="col">
                 <div class="card">
-                    <img src="" alt="">
-                    <div>
+                    <img src="img/male1.png" alt="Foto ragazzo 1">
+                    <div class="content">
                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus alias accusamus voluptatibus, minus assumenda, labore laboriosam velit facere nulla distinctio eos quam quisquam perspiciatis aliquid id quia, cupiditate impedit tempora. 
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="" alt="">
-                    <div>
+                    <img src="img/female1.png" alt="Foto ragazza 1">
+                    <div class="content">
                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus alias accusamus voluptatibus, minus assumenda, labore laboriosam velit facere nulla distinctio eos quam quisquam perspiciatis aliquid id quia, cupiditate impedit tempora. 
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="" alt="">
-                    <div>
+                    <img src="img/male2.png" alt="Foto ragazzo 2">
+                    <div class="content">
                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus alias accusamus voluptatibus, minus assumenda, labore laboriosam velit facere nulla distinctio eos quam quisquam perspiciatis aliquid id quia, cupiditate impedit tempora. 
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="" alt="">
-                    <div>
+                    <img src="img/female2.png" alt="Foto ragazza 2">
+                    <div class="content">
                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus alias accusamus voluptatibus, minus assumenda, labore laboriosam velit facere nulla distinctio eos quam quisquam perspiciatis aliquid id quia, cupiditate impedit tempora. 
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="" alt="">
-                    <div>
+                    <img src="img/male3.png" alt="Foto ragazzo 3">
+                    <div class="content">
                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus alias accusamus voluptatibus, minus assumenda, labore laboriosam velit facere nulla distinctio eos quam quisquam perspiciatis aliquid id quia, cupiditate impedit tempora. 
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="" alt="">
-                    <div>
+                    <img src="img/female3.png" alt="Foto ragazza 3">
+                    <div class="content">
                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus alias accusamus voluptatibus, minus assumenda, labore laboriosam velit facere nulla distinctio eos quam quisquam perspiciatis aliquid id quia, cupiditate impedit tempora. 
                     </div>
                 </div>
