CSS: background color cards

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Main -->
     <main>
         <!-- Paragrafo testo -->
-        <section>
+        <section class="main-text">
             <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem labore velit ipsum sint maxime deserunt ducimus nesciunt a eveniet excepturi! Corporis, praesentium amet? Officiis labore illo ducimus eveniet quis reiciendis.
             </p>
@@ -26,50 +26,62 @@
         <!-- Colonne contatti -->
         <section class="columns clearfix">
             <div class="col">
-                <div class="card">
+                <div class="card clearfix">
                     <img src="img/male1.png" alt="Foto ragazzo 1">
                     <div class="content">
-                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus alias accusamus voluptatibus, minus assumenda, labore laboriosam velit facere nulla distinctio eos quam quisquam perspiciatis aliquid id quia, cupiditate impedit tempora. 
+                       <h3>Marco Bianchi</h3>
+                       <p>Designer</p>
+                       <p><address>marcobianchi@team.com</address></p>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card clearfix">
                     <img src="img/female1.png" alt="Foto ragazza 1">
                     <div class="content">
-                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus alias accusamus voluptatibus, minus assumenda, labore laboriosam velit facere nulla distinctio eos quam quisquam perspiciatis aliquid id quia, cupiditate impedit tempora. 
+                        <h3>Laura Rossi</h3>
+                        <p>Front-end Developer</p>
+                        <p><address>laurarossi@team.com</address></p>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card clearfix">
                     <img src="img/male2.png" alt="Foto ragazzo 2">
                     <div class="content">
-                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus alias accusamus voluptatibus, minus assumenda, labore laboriosam velit facere nulla distinctio eos quam quisquam perspiciatis aliquid id quia, cupiditate impedit tempora. 
+                        <h3>Giorgio Verdi</h3>
+                        <p>Back-end Developer</p>
+                        <p><address>giorgioverdi@team.com</address></p>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card clearfix">
                     <img src="img/female2.png" alt="Foto ragazza 2">
                     <div class="content">
-                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus alias accusamus voluptatibus, minus assumenda, labore laboriosam velit facere nulla distinctio eos quam quisquam perspiciatis aliquid id quia, cupiditate impedit tempora. 
+                        <h3>Marta Ipsum</h3>
+                        <p>SEO Specialist</p>
+                        <p><address>martaipsum@team.com</address></p>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card clearfix">
                     <img src="img/male3.png" alt="Foto ragazzo 3">
                     <div class="content">
-                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus alias accusamus voluptatibus, minus assumenda, labore laboriosam velit facere nulla distinctio eos quam quisquam perspiciatis aliquid id quia, cupiditate impedit tempora. 
+                        <h3>Roberto Lorem</h3>
+                        <p>Project Manager</p>
+                        <p><address>robertolorem@team.com</address></p>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card">
+                <div class="card clearfix">
                     <img src="img/female3.png" alt="Foto ragazza 3">
                     <div class="content">
-                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus alias accusamus voluptatibus, minus assumenda, labore laboriosam velit facere nulla distinctio eos quam quisquam perspiciatis aliquid id quia, cupiditate impedit tempora. 
+                        <h3>Daniela Amet</h3>
+                        <p>Analyst</p>
+                        <p><address>danielaamet@team.com</address></p>
                     </div>
                 </div>
             </div>
